--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pm2": "^6.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
